<resources>
    <string name="app_name">AndroidProject</string>
    <string name="email">email</string>
    <string name="display_name">display name</string>
    <string name="new_Password">New password</string>
    <string name="confirm_Password">Confirm password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="Already_have_an_account">Already have an account?</string>
    <string name="Confirm_password">confirm password</string>
    <string name="user_name">user name</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello">Hello</string>
    <string name="confirm_New_Password">Confirm new password</string>
    <string name="cart">Cart</string>
    <string name="title">title</string>
    <string name="add_to_chart">Add To Chart</string>
    <string name="description">Description</string>
    <string name="_1">1</string>
    <string name="todo">TODO</string>
    <string name="dollar">$</string>
    <string name="password">password</string>
</resources>