<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.showDetailActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="#373554"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/priceTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/dollar"
                android:textAlignment="center"
                android:textColor="#FF5722"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/picFood"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/pizza" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/plusbtn"
                    android:layout_width="34dp"
                    android:layout_height="27dp"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/add"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/numberOrderTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/_1"
                    android:textAlignment="center"
                    android:textColor="#373554"
                    android:textSize="18sp"

                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/minusbtn"
                    android:layout_width="28dp"
                    android:layout_height="23dp"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/minus"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="318dp"
                android:layout_height="73dp"
                android:layout_margin="16dp"
                android:text="@string/description"
                android:textAlignment="center"
                android:textColor="#686767"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/addToChartBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/orange_button"
        android:elevation="3dp"
        android:gravity="center"
        android:text="@string/add_to_chart"
        android:textColor="#616161"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>