<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".Activity.ForgetPassword">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:paddingStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:autofillHints=""
            android:background="@drawable/background_edittext"
            android:drawableEnd="@drawable/ic_email"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:autofillHints=""
            android:background="@drawable/background_edittext"
            android:drawableEnd="@drawable/ic_password"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/new_Password"
            android:inputType="textPassword"
            android:padding="15dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/confirm_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:autofillHints=""
            android:background="@drawable/background_edittext"
            android:drawableEnd="@drawable/ic_password"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/confirm_Password"
            android:inputType="textPassword"
            android:padding="15dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/background_btn"
            android:text="@string/confirm_New_Password"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>