<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddEmployeeActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="AddEmployee"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="RestaurantLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/looogoo" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/EmployeeUserNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/background_edittext"
            android:drawableEnd="@drawable/ic_user"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/EmployeePasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/background_edittext"
            android:drawableEnd="@drawable/ic_password"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/EmployeeConfirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/background_edittext"
            android:drawableEnd="@drawable/ic_password"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/confirm_New_Password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/EmployeeNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/background_edittext"
            android:drawableEnd="@drawable/ic_user"
            android:elevation="2dp"
            android:ems="10"
            android:hint="EmployeeName"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/EmployeeSalaryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/background_edittext"
            android:drawableEnd="@android:drawable/ic_lock_power_off"
            android:elevation="2dp"
            android:ems="10"
            android:hint="EmployeeSalary"
            android:inputType="number|text"
            android:padding="15dp"
            android:textColorHint="#757575" />


        <RadioGroup
            android:id="@+id/radioGroupAddEmployee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_Chef"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:checkedButton="@+id/radio_Chef"
                android:minHeight="48dp"
                android:onClick="onRadioButtonClicked"
                android:text="Chef" />

            <RadioButton
                android:id="@+id/radio_DeliveryEmployee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:onClick="onRadioButtonClicked"
                android:text="DeliveryEmployee" />
        </RadioGroup>


    </LinearLayout>


    <Button
        android:id="@+id/addEmployeeEmployeePage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/background_btn"
        android:onClick="handleAddEmployeeEmployeePage"
        android:text="AddEmployee"
        android:textColor="#FFFFFF"
        android:textIsSelectable="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>